--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "nesbot/carbon": "^3.10",
-        "symfony/mailer": "^7.3"
+        "symfony/mailer": "^7.3",
+        "setasign/fpdf": "^1.8"
     }
 }
